Fix pagination moving under email/deselect button on small screens

--- a/studentsearch/static/core.css
+++ b/studentsearch/static/core.css
@@ -357,13 +357,19 @@ body {
     display: none; /* Don't show on results */
 }
 
-#search_pagination, #deselect_button {
+#search_pagination {
     float: left;
-    margin: 0 0 0 25px;
+    margin: 0;
+}
+
+#deselect_button {
+    margin: 0 25px 15px;
+    float: left;
 }
 
 #email_button {
     float: left;
+    margin-bottom: 15px;
 }
 
 
